Thu Aug 19 16:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCalendarDate.m: Various memory-leak fixes.
	* Source/NSTimeZone.m: Various memory leak fixes.

Sat Aug  7 17:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Testing/tcpport-server.m: fixes to work with NSNotificationCenter.

1999-08-10  Adam Fedor  <fedor@gnu.org>

	* configure.in: Move objc_conditioned_wait test so it gets proper
	LIBS setup
	* Source/mframe/configure: Regenerate using autoconf 2.13

1999-08-08  Adam Fedor  <fedor@gnu.org>

	* Source/NSPort.m (-sendBeforeDate:): Change return type to BOOL
	as per the spec.  
	* Source/NSPortMessage.m: Likewise. (patch from
	Pedro Ivo Andrade Tavares <ptavares@iname.com>).

	* configure.in: Rewrite +load method test.

1999-08-08  Manuel Guesdon  <mguesdon@sbuilders.com>

	* Source/NSGString.m (stringIncrementCountAndMakeHoleAt and stringDecrementCountAndFillHoleAt): 
	Added a test for null length/size. 
	Added NSCAssert on index/size/count/capacity
	
1999-08-05  Adam Fedor  <fedor@gnu.org>

	* Source/NSLock.m ([NSConditionLock -lockWhenCondition:beforeDate:]): 
	Implement (Patch from Patrick Stein <jolly@jinx.de>).
	* configure.in: Check for objc_condition_timewait.

	* Source/NSString.m (-initWithFormat:arguments:): Don't advance
	vsprintf arguments on powerpc.

	* Source/mframe/powerpc/linux-gnu (MFRAME_ARG_ENCODING): Fix
	alignment of small structures.
	
	* many files: Changed FSF mailing address

>>>>>>> 1.463.2.5
Fri Aug  6 13:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Portability fixes for compilers that don't leave enough space in an
	NXConstantString object for the _hash ivar of NSGCString.
	* Source/NSGCString.m: don't use _hash ivar of NXConstantString.
	* Source/NSGString.m: don't use _hash ivar of NXConstantString.
	* Source/Foundation/NSString.h: Add warning comment about the ivar
	layout for NXConstantString.
