@@ -1,3 +1,8 @@
+Fri Aug 20 16:17:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* NSNotificationQueue.m: notifyIdle() fix to send ASAP notifications
+	even when no idle notifications are waiting.
+
 Thu Aug 19 16:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSCalendarDate.m: Various memory-leak fixes.
